Fix font-size on mobile in px

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -43,7 +43,7 @@ nav li :hover {
     width: 50%;
   }
   nav a {
-    font-size: 3.5vh;
+    font-size: 3vh;
   }
 }
 @media only screen and (max-width: 850px) {
@@ -58,6 +58,6 @@ nav li :hover {
     overflow-x: hidden;
   }
   nav a {
-    font-size: 4vw;
+    font-size: 20px;
   }
 }
